Fixed - Not able to close conditions control once clicked to add Fixed - CSS/UI issues related to conditional panel  1. 'then' label gets overlapped by 'Select Action' i/p and 'if' label with 'Select Field'  2. apply span8 instead of span3 'Select Action'

--- a/styl/formbuilder.styl
+++ b/styl/formbuilder.styl
@@ -232,7 +232,7 @@
 
   .fb-field-condition-label
     padding-top: 2%;
-    padding-left: 3%;
+    padding-left: 2%;
     margin-left: 0%;
 
   .fb-edit-section-header
@@ -569,6 +569,26 @@
 .submitted input:invalid.hasDatepicker { border-color: red; }
 .submitted .bootstrap-filestyle > label { border-color: red; }
 
+.fb-this-field-div {
+  width:60% !important;
+  float:left !important;
+}
+
+.fb-this-field-input {
+  width:100% !important;
+}
+
+a.js-remove-condition.fb-button {
+  margin-top: 5px;
+  margin-right: 10px;
+}
+.fb-min-width-40 {
+  min-width: 40px;
+}
+
+.fb-min-width-10 {
+  min-width: 10px;
+}
 
 @media print {
 
